# ecoin_price_forecaster

./: .env  .gitignore  .pre-commit-config.yaml  README.md  docker-compose.yml  pyproject.toml  scrapy.cfg  tox.ini
.github/workflows/: style_checks.yml
airflow/dags/: coingecko_dag.py
kubernetes/: bitcoin-crawler.yaml  bitcoin-train.yaml  coingecko-cronjob.yaml  ethereum-crawler.yaml  ethereum-train.yaml  forecasting-api.yaml  models-volume-claim.yaml  postgres-db.yaml  python-env.yaml
notebooks/: test_database.ipynb  test_scraper.ipynb
src/: Dockerfile  constants.py  logger_definition.py  utils.py
src/api/: forecasting_api.py
src/bash/: bitcoin-cronjob.sh  ethereum-cronjob.sh
src/crawler/: crawl.py  items.py  middlewares.py  pipelines.py  settings.py
src/crawler/spiders/: coingecko_spider.py
src/db_scripts/: db_connection.py  db_mappings.py
src/db_scripts/queries/: query1.sql  query2.sql
src/models/: forecasters.py  train_forecasters.py
src/twitter_streaming/: twitter_stream_listener.py  twitter_tracker.py
