[tool.poetry]
name = "ml-project-template"
version = "0.1.0"
description = "Base git configuration for ML projects"
authors = ["guzmanvitar <guzmanvitar@gmail.com>"]
readme = "README.md"
packages = [{include = "ml_project_template"}]

[tool.poetry.dependencies]
python = "^3.10"
logging = "^0.4.9.6"
pathlib = "^1.0.1"


[tool.poetry.group.dev.dependencies]
black = "^22.12.0"
ipykernel = "^6.19.4"
isort = "^5.11.3"
flake8 = "^6.0.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
