[tool.poetry]
name = "mutt-data-exam"
version = "0.1.0"
description = "Guzman Vitar's Mutt Data exam"
authors = ["guzmanvitar <guzmanvitar@gmail.com>"]
packages = [
    { include = "src" }
]

[tool.poetry.dependencies]
python = "^3.10"
logging = "^0.4.9.6"
pathlib = "^1.0.1"
requests = "^2.28.1"
psycopg2 = "^2.9.5"
sqlalchemy = "^1.4.45"
scrapy = "^2.7.1"
pandas = "^1.5.2"


[tool.poetry.group.dev.dependencies]
black = "^22.12.0"
ipykernel = "^6.19.4"
isort = "^5.11.3"
flake8 = "^6.0.0"
ipdb = "^0.13.11"
pytest = "^7.2.0"
pre-commit = "^2.20.0"
ipython = "^8.7.0"
jupyterlab = "^3.5.2"

[tool.black]
line-length = 100
preview = true

[tool.isort]
atomic = true
profile = "black"
skip = [".venv"]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
